<resources>
    <string name="app_name">GLector</string>
    <string name="music_player_page_title">GLector Music Player</string>
    <string name="camera_page_title">GLector Camera</string>
    <string name="older_news_page_title">GLector Library</string>

    <!-- About Page -->
    <string name="about_page_title">About</string>
    <string name="about_rate_title">Rate GLector</string>
    <string name="about_rate_message">Thank you so much for using the app. If you like the app, would you please rate it?</string>
    <string name="about_rate_positive">RATE IT NOW</string>
    <string name="about_rate_negative">NOT NOW</string>

    <!-- Camera Page -->
    <string name="camera_permission_title">Allow <b>gLector</b> to access Camera</string>
    <string name="camera_positive">ALLOW </string>
    <string name="camera_negative">DENY</string>

    <string name="action_settings">Settings</string>
    <string name="image_details_header">Details:</string>
    <string name="image_preview_header">Preview:</string>
    <string name="loading_message">Uploading image. Please wait ...</string>

    <string name="dialog_select_prompt">Choose a picture</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="launch_camera">Get Started</string>

    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="first_onboarding_page">Snap an image of a newspaper or choose an already existing photo of a
        newspaper, receipt, or anything with text on it to make it instantly readable.</string>

    <!-- About Page -->
    <string name="app_header_detail">GLector is your everyday pocket assistant.
                You can capture or load text-based images and GLector will intelligently extract the text based on OCR technology.
                Once extracted, you can then instruct GLector to read it out to you. All your older recording are stored safely on
                your device.</string>
    <string name="meet_team_header">Meet the Team</string>
    <string name="meet_team_header_detail"><b>Suman Sucharit Das</b> - Developer and Designer
        \nSuman is a mobile enthusiast and architect. Creative and curious by nature, he aims to build applications to solve day to day
        problems in users’ life.</string>
    <string name="credits_header">Credits</string>
    <string name="credits_header_detail"><b>Pratyush Pandab</b> - UX/UI Design recommendations
        \n\nOpen source images/icon credits:
            \n - Google Team
            \n - Icon 54 Team
            \n - Double J Team
            \n - Icon Design Team
            \n - Picol Team</string>

    <!-- Facebook -->
    <string name="facebook_app_id">1018169818273175</string>
</resources>